--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.9",
+    "@prisma/client": "^4.1.1",
+    "@tabler/icons": "^1.78.1",
     "next": "12.2.3",
     "next-themes": "^0.2.0",
+    "prisma": "^4.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
