--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@nextui-org/react": "^1.0.0-beta.9",
     "@prisma/client": "^4.1.1",
     "@tabler/icons": "^1.78.1",
+    "dotenv": "^16.0.1",
+    "mongodb": "^4.8.1",
     "next": "12.2.3",
     "next-themes": "^0.2.0",
     "prisma": "^4.1.1",
