--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.9",
     "@tabler/icons": "^1.78.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "mongodb": "^4.8.1",
     "next": "12.2.3",
